--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "assetscan-agent"
-version = "0.1.0"
+version = "2.0.0"
 edition = "2021"
 
 [[bin]]
@@ -8,14 +8,31 @@ name = "assetscan-agent"
 path = "src/main.rs"
 
 [dependencies]
-sysinfo  = "0.33"                                          # versão actual
-serde    = { version = "1", features = ["derive"] }
+sysinfo = "0.33"
+serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-reqwest  = { version = "0.12", features = ["blocking", "json"] }
-winreg   = "0.52"
-chrono   = { version = "0.4", features = ["serde"] }
+reqwest = { version = "0.12", features = ["blocking", "json"] }
+winreg = "0.52"
+chrono = { version = "0.4", features = ["serde"] }
+tokio = { version = "1", features = ["full"] }
+anyhow = "1"
+thiserror = "1"
+uuid = { version = "1", features = ["v4"] }
+sha2 = "0.10"
+hex = "0.4"
+windows = { version = "0.58", features = [
+    "Win32_Foundation",
+    "Win32_System_Threading",
+    "Win32_UI_WindowsAndMessaging",
+    "Win32_System_Diagnostics_ToolHelp",
+    "Win32_Security",
+    "Data_Xml_Dom",
+    "UI_Notifications"
+]}
+notify-rust = "4"
+wmi = "0.13"
 
 [profile.release]
 opt-level = "z"
-lto       = true
-strip     = true
+lto = true
+strip = true
