--- a/dashboard/src-tauri/Cargo.toml
+++ b/dashboard/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "assetscan-dashboard"
-version = "0.1.0"
+version = "2.0.0"
 edition = "2021"
 
 [build-dependencies]
@@ -12,9 +12,17 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 axum = { version = "0.7", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
-rusqlite = { version = "0.31", features = ["bundled"] }   # SQLite embutido
+rusqlite = { version = "0.31", features = ["bundled"] }
 chrono = { version = "0.4", features = ["serde"] }
 tower-http = { version = "0.5", features = ["cors"] }
-uuid = { version = "1", features = ["v4"] }
+uuid = { version = "1", features = ["v4", "serde"] }
 dirs = "5"
+anyhow = "1"
+thiserror = "1"
+sha2 = "0.10"
+hex = "0.4"
+rand = "0.8"
 
+[profile.release]
+opt-level = 3
+lto = true
