--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -1,42 +1,32 @@
 [package]
 name = "assetscan-agent"
-version = "2.0.0"
+version = "3.0.0"
 edition = "2021"
 
-[[bin]]
-name = "assetscan-agent"
-path = "src/main.rs"
-
 [dependencies]
-sysinfo = "0.33"
+tokio = { version = "1", features = ["full"] }
+reqwest = { version = "0.12", features = ["json"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-reqwest = { version = "0.12", features = ["blocking", "json"] }
-winreg = "0.52"
-chrono = { version = "0.4", features = ["serde"] }
-tokio = { version = "1", features = ["full"] }
 anyhow = "1"
-thiserror = "1"
+chrono = { version = "0.4", features = ["serde"] }
+sysinfo = "0.31"
+winreg = "0.52"
 uuid = { version = "1", features = ["v4"] }
-sha2 = "0.10"
-hex = "0.4"
+
+[target.'cfg(windows)'.dependencies]
 windows = { version = "0.58", features = [
     "Win32_Foundation",
     "Win32_System_Threading",
-    "Win32_UI_WindowsAndMessaging",
-    "Win32_System_Diagnostics_ToolHelp",
-    "Win32_Security",
+    "Win32_UI_Notifications",
     "Data_Xml_Dom",
-    "UI_Notifications",
     "Win32_Graphics_Gdi",
-    "Win32_System_EventLog",
-]}
-notify-rust = "4"
-wmi = "0.13"
-image = "0.24"
+    "Win32_System_Memory",
+    "Win32_NetworkManagement_IpHelper",
+] }
 
 [profile.release]
 opt-level = "z"
 lto = true
+codegen-units = 1
 strip = true
-
