--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -13,6 +13,9 @@ chrono = { version = "0.4", features = ["serde"] }
 sysinfo = "0.31"
 winreg = "0.52"
 uuid = { version = "1", features = ["v4"] }
+lazy_static = "1.4.0"
+wmi = "0.13"
+
 
 [target.'cfg(windows)'.dependencies]
 windows = { version = "0.58", features = [
@@ -23,6 +26,8 @@ windows = { version = "0.58", features = [
     "Win32_Graphics_Gdi",
     "Win32_System_Memory",
     "Win32_NetworkManagement_IpHelper",
+    "UI_Notifications", # ADICIONA ISTO (Para as Notificações)
+    "Data_Xml_Dom",
 ] }
 
 [profile.release]
