--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -16,6 +16,7 @@
     "@tauri-apps/plugin-shell": "^2.0.0",
     "jspdf": "^4.2.0",
     "jspdf-autotable": "^5.0.7",
+    "lint": "^1.1.2",
     "lucide-react": "latest",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -32,6 +33,6 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.19",
     "typescript": "^5.2.2",
-    "vite": "^5.1.6"
+    "vite": "^7.3.1"
   }
 }
